# tauri-password-saver

./: README.md  package-lock.json  package.json
releases/appimage/password-saver.AppDir/: .DirIcon  password-saver.desktop
releases/appimage/password-saver.AppDir/apprun-hooks/: linuxdeploy-plugin-gtk.sh
releases/appimage/password-saver.AppDir/usr/lib/: libcups.so.2  libgdk_pixbuf-2.0.so.0.4200.8  libgio-2.0.so.0.7200.4  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0.7200.4  libgssapi_krb5.so.2  libgstallocators-1.0.so.0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstfft-1.0.so.0  libgstgl-1.0.so.0  libgstpbutils-1.0.so.0  libgsttag-1.0.so.0  libgstvideo-1.0.so.0  libk5crypto.so.3  libkrb5.so.3  libkrb5support.so.0  libtiff.so.5  libwmf-0.2.so.7  libwmflite-0.2.so.7  libxml2.so.2
releases/appimage/password-saver.AppDir/usr/lib/x86_64-linux-gnu/gdk-pixbuf-2.0/2.10.0/: loaders.cache
releases/appimage/password-saver.AppDir/usr/lib/x86_64-linux-gnu/webkit2gtk-4.1/: WebKitNetworkProcess  WebKitWebProcess
releases/deb/password-saver_0.1.0_amd64/control/: control  md5sums
releases/rpm/password-saver-0.1.0-1.x86_64/usr/share/applications/: password-saver.desktop
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/main/: main-page.css  main-page.jsx
