[package]
name = "password-saver"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_saver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
hex = "0.4"
tokio = { version = "1", features = ["full"] }  # For async file I/O
tauri-plugin-log = "2"
log = "0.4"
env_logger = "0.10"
